# many_requests

./: .gitignore  README.rst  pyproject.toml
many_requests/: __init__.py  __main__.py
many_requests_cli/: main.py
tests/: test_many_requests.py
