[tool.poetry]
name = "many_requests"
version = "0.1.0"
description = "CLI app to send muliple requests to endpoint."
authors = ["Yves Tumushimire <ytumushimire@truststamp.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
